Assignment1/ParCpp.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.11 from ParCpp.y
-----------------------------------------------------------------------------

state 158 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pDef -> Def                                 (1)
	%start_pListDef -> ListDef                         (2)
	%start_pArg -> Arg                                 (3)
	%start_pListArg -> ListArg                         (4)
	%start_pStm -> Stm                                 (5)
	%start_pSTM -> STM                                 (6)
	%start_pListStm -> ListStm                         (7)
	%start_pExp15 -> Exp15                             (8)
	%start_pExp14 -> Exp14                             (9)
	%start_pExp13 -> Exp13                             (10)
	%start_pExp12 -> Exp12                             (11)
	%start_pExp11 -> Exp11                             (12)
	%start_pExp10 -> Exp10                             (13)
	%start_pExp9 -> Exp9                               (14)
	%start_pExp8 -> Exp8                               (15)
	%start_pExp4 -> Exp4                               (16)
	%start_pExp3 -> Exp3                               (17)
	%start_pExp2 -> Exp2                               (18)
	%start_pExp -> Exp                                 (19)
	%start_pExp1 -> Exp1                               (20)
	%start_pExp5 -> Exp5                               (21)
	%start_pExp6 -> Exp6                               (22)
	%start_pExp7 -> Exp7                               (23)
	%start_pListExp -> ListExp                         (24)
	%start_pType -> Type                               (25)
	%start_pListId -> ListId                           (26)
	Double -> L_doubl                                  (27)
	Integer -> L_integ                                 (28)
	String -> L_quoted                                 (29)
	Id -> L_Id                                         (30)
	Program -> ListDef                                 (31)
	Def -> Type Id '(' ListArg ')' '{' ListStm '}'     (32)
	ListDef ->                                         (33)
	ListDef -> Def ListDef                             (34)
	Arg -> Type Id                                     (35)
	ListArg ->                                         (36)
	ListArg -> Arg                                     (37)
	ListArg -> Arg ',' ListArg                         (38)
	Stm -> Exp ';'                                     (39)
	Stm -> Type ListId ';'                             (40)
	Stm -> Type Id '=' Exp ';'                         (41)
	Stm -> 'return' Exp ';'                            (42)
	Stm -> 'return' ';'                                (43)
	Stm -> 'while' '(' Exp ')' Stm                     (44)
	Stm -> '{' ListStm '}'                             (45)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (46)
	STM -> Type Id ';'                                 (47)
	ListStm ->                                         (48)
	ListStm -> Stm ListStm                             (49)
	Exp15 -> 'true'                                    (50)
	Exp15 -> 'false'                                   (51)
	Exp15 -> Integer                                   (52)
	Exp15 -> Double                                    (53)
	Exp15 -> String                                    (54)
	Exp15 -> Id                                        (55)
	Exp15 -> Exp15 '::' Exp15                          (56)
	Exp15 -> Id '(' ListExp ')'                        (57)
	Exp15 -> '(' Exp ')'                               (58)
	Exp14 -> Exp15 '++'                                (59)
	Exp14 -> Exp15 '--'                                (60)
	Exp14 -> Exp15                                     (61)
	Exp13 -> '++' Exp14                                (62)
	Exp13 -> '--' Exp14                                (63)
	Exp13 -> Exp14                                     (64)
	Exp12 -> Exp12 '*' Exp13                           (65)
	Exp12 -> Exp12 '/' Exp13                           (66)
	Exp12 -> Exp13                                     (67)
	Exp11 -> Exp11 '+' Exp12                           (68)
	Exp11 -> Exp11 '-' Exp12                           (69)
	Exp11 -> Exp12                                     (70)
	Exp10 -> Exp10 '<<' Exp11                          (71)
	Exp10 -> Exp11                                     (72)
	Exp9 -> Exp9 '<' Exp10                             (73)
	Exp9 -> Exp9 '>' Exp10                             (74)
	Exp9 -> Exp9 '<=' Exp10                            (75)
	Exp9 -> Exp9 '>=' Exp10                            (76)
	Exp9 -> Exp10                                      (77)
	Exp8 -> Exp8 '==' Exp9                             (78)
	Exp8 -> Exp8 '!=' Exp9                             (79)
	Exp8 -> Exp9                                       (80)
	Exp4 -> Exp4 '&&' Exp5                             (81)
	Exp4 -> Exp5                                       (82)
	Exp3 -> Exp3 '||' Exp4                             (83)
	Exp3 -> Exp4                                       (84)
	Exp2 -> Exp3 '=' Exp2                              (85)
	Exp2 -> Exp3                                       (86)
	Exp -> Exp1                                        (87)
	Exp1 -> Exp2                                       (88)
	Exp5 -> Exp6                                       (89)
	Exp6 -> Exp7                                       (90)
	Exp7 -> Exp8                                       (91)
	ListExp ->                                         (92)
	ListExp -> Exp                                     (93)
	ListExp -> Exp ',' ListExp                         (94)
	Type -> 'bool'                                     (95)
	Type -> 'int'                                      (96)
	Type -> 'double'                                   (97)
	Type -> 'void'                                     (98)
	Type -> 'string'                                   (99)
	ListId -> Id                                       (100)
	ListId -> Id ',' ListId                            (101)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!='           { PT _ (TS _ 1) }
	'&&'           { PT _ (TS _ 2) }
	'('            { PT _ (TS _ 3) }
	')'            { PT _ (TS _ 4) }
	'*'            { PT _ (TS _ 5) }
	'+'            { PT _ (TS _ 6) }
	'++'           { PT _ (TS _ 7) }
	','            { PT _ (TS _ 8) }
	'-'            { PT _ (TS _ 9) }
	'--'           { PT _ (TS _ 10) }
	'/'            { PT _ (TS _ 11) }
	'::'           { PT _ (TS _ 12) }
	';'            { PT _ (TS _ 13) }
	'<'            { PT _ (TS _ 14) }
	'<<'           { PT _ (TS _ 15) }
	'<='           { PT _ (TS _ 16) }
	'='            { PT _ (TS _ 17) }
	'=='           { PT _ (TS _ 18) }
	'>'            { PT _ (TS _ 19) }
	'>='           { PT _ (TS _ 20) }
	'bool'         { PT _ (TS _ 21) }
	'double'       { PT _ (TS _ 22) }
	'else'         { PT _ (TS _ 23) }
	'false'        { PT _ (TS _ 24) }
	'if'           { PT _ (TS _ 25) }
	'int'          { PT _ (TS _ 26) }
	'return'       { PT _ (TS _ 27) }
	'string'       { PT _ (TS _ 28) }
	'true'         { PT _ (TS _ 29) }
	'void'         { PT _ (TS _ 30) }
	'while'        { PT _ (TS _ 31) }
	'{'            { PT _ (TS _ 32) }
	'||'           { PT _ (TS _ 33) }
	'}'            { PT _ (TS _ 34) }
	L_doubl        { PT _ (TD $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pDef     rule  1
	%start_pListDef rule  2
	%start_pArg     rule  3
	%start_pListArg rule  4
	%start_pStm     rule  5
	%start_pSTM     rule  6
	%start_pListStm rule  7
	%start_pExp15   rule  8
	%start_pExp14   rule  9
	%start_pExp13   rule  10
	%start_pExp12   rule  11
	%start_pExp11   rule  12
	%start_pExp10   rule  13
	%start_pExp9    rule  14
	%start_pExp8    rule  15
	%start_pExp4    rule  16
	%start_pExp3    rule  17
	%start_pExp2    rule  18
	%start_pExp     rule  19
	%start_pExp1    rule  20
	%start_pExp5    rule  21
	%start_pExp6    rule  22
	%start_pExp7    rule  23
	%start_pListExp rule  24
	%start_pType    rule  25
	%start_pListId  rule  26
	Double          rule  27
	Integer         rule  28
	String          rule  29
	Id              rule  30
	Program         rule  31
	Def             rule  32
	ListDef         rules 33, 34
	Arg             rule  35
	ListArg         rules 36, 37, 38
	Stm             rules 39, 40, 41, 42, 43, 44, 45, 46
	STM             rule  47
	ListStm         rules 48, 49
	Exp15           rules 50, 51, 52, 53, 54, 55, 56, 57, 58
	Exp14           rules 59, 60, 61
	Exp13           rules 62, 63, 64
	Exp12           rules 65, 66, 67
	Exp11           rules 68, 69, 70
	Exp10           rules 71, 72
	Exp9            rules 73, 74, 75, 76, 77
	Exp8            rules 78, 79, 80
	Exp4            rules 81, 82
	Exp3            rules 83, 84
	Exp2            rules 85, 86
	Exp             rule  87
	Exp1            rule  88
	Exp5            rule  89
	Exp6            rule  90
	Exp7            rule  91
	ListExp         rules 92, 93, 94
	Type            rules 95, 96, 97, 98, 99
	ListId          rules 100, 101

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'bool'         shift, and enter state 33
	'double'       shift, and enter state 34
	'int'          shift, and enter state 35
	'string'       shift, and enter state 36
	'void'         shift, and enter state 37
	%eof           reduce using rule 33

	Program        goto state 101
	Def            goto state 97
	ListDef        goto state 102
	Type           goto state 99

State 1


	'bool'         shift, and enter state 33
	'double'       shift, and enter state 34
	'int'          shift, and enter state 35
	'string'       shift, and enter state 36
	'void'         shift, and enter state 37

	Def            goto state 100
	Type           goto state 99

State 2


	'bool'         shift, and enter state 33
	'double'       shift, and enter state 34
	'int'          shift, and enter state 35
	'string'       shift, and enter state 36
	'void'         shift, and enter state 37
	%eof           reduce using rule 33

	Def            goto state 97
	ListDef        goto state 98
	Type           goto state 99

State 3


	'bool'         shift, and enter state 33
	'double'       shift, and enter state 34
	'int'          shift, and enter state 35
	'string'       shift, and enter state 36
	'void'         shift, and enter state 37

	Arg            goto state 96
	Type           goto state 95

State 4


	'bool'         shift, and enter state 33
	'double'       shift, and enter state 34
	'int'          shift, and enter state 35
	'string'       shift, and enter state 36
	'void'         shift, and enter state 37
	%eof           reduce using rule 36

	Arg            goto state 93
	ListArg        goto state 94
	Type           goto state 95

State 5


	'('            shift, and enter state 59
	'++'           shift, and enter state 60
	'--'           shift, and enter state 61
	'bool'         shift, and enter state 33
	'double'       shift, and enter state 34
	'false'        shift, and enter state 62
	'if'           shift, and enter state 86
	'int'          shift, and enter state 35
	'return'       shift, and enter state 87
	'string'       shift, and enter state 36
	'true'         shift, and enter state 63
	'void'         shift, and enter state 37
	'while'        shift, and enter state 88
	'{'            shift, and enter state 89
	L_doubl        shift, and enter state 28
	L_integ        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 31

	Double         goto state 38
	Integer        goto state 39
	String         goto state 40
	Id             goto state 41
	Stm            goto state 92
	Exp15          goto state 42
	Exp14          goto state 43
	Exp13          goto state 44
	Exp12          goto state 45
	Exp11          goto state 46
	Exp10          goto state 47
	Exp9           goto state 48
	Exp8           goto state 49
	Exp4           goto state 50
	Exp3           goto state 51
	Exp2           goto state 52
	Exp            goto state 84
	Exp1           goto state 54
	Exp5           goto state 55
	Exp6           goto state 56
	Exp7           goto state 57
	Type           goto state 85

State 6


	'bool'         shift, and enter state 33
	'double'       shift, and enter state 34
	'int'          shift, and enter state 35
	'string'       shift, and enter state 36
	'void'         shift, and enter state 37

	STM            goto state 90
	Type           goto state 91

State 7


	'('            shift, and enter state 59
	'++'           shift, and enter state 60
	'--'           shift, and enter state 61
	'bool'         shift, and enter state 33
	'double'       shift, and enter state 34
	'false'        shift, and enter state 62
	'if'           shift, and enter state 86
	'int'          shift, and enter state 35
	'return'       shift, and enter state 87
	'string'       shift, and enter state 36
	'true'         shift, and enter state 63
	'void'         shift, and enter state 37
	'while'        shift, and enter state 88
	'{'            shift, and enter state 89
	L_doubl        shift, and enter state 28
	L_integ        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 31
	%eof           reduce using rule 48

	Double         goto state 38
	Integer        goto state 39
	String         goto state 40
	Id             goto state 41
	Stm            goto state 82
	ListStm        goto state 83
	Exp15          goto state 42
	Exp14          goto state 43
	Exp13          goto state 44
	Exp12          goto state 45
	Exp11          goto state 46
	Exp10          goto state 47
	Exp9           goto state 48
	Exp8           goto state 49
	Exp4           goto state 50
	Exp3           goto state 51
	Exp2           goto state 52
	Exp            goto state 84
	Exp1           goto state 54
	Exp5           goto state 55
	Exp6           goto state 56
	Exp7           goto state 57
	Type           goto state 85

State 8


	'('            shift, and enter state 59
	'false'        shift, and enter state 62
	'true'         shift, and enter state 63
	L_doubl        shift, and enter state 28
	L_integ        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 31

	Double         goto state 38
	Integer        goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 81

State 9


	'('            shift, and enter state 59
	'false'        shift, and enter state 62
	'true'         shift, and enter state 63
	L_doubl        shift, and enter state 28
	L_integ        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 31

	Double         goto state 38
	Integer        goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 42
	Exp14          goto state 80

State 10


	'('            shift, and enter state 59
	'++'           shift, and enter state 60
	'--'           shift, and enter state 61
	'false'        shift, and enter state 62
	'true'         shift, and enter state 63
	L_doubl        shift, and enter state 28
	L_integ        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 31

	Double         goto state 38
	Integer        goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 42
	Exp14          goto state 43
	Exp13          goto state 79

State 11


	'('            shift, and enter state 59
	'++'           shift, and enter state 60
	'--'           shift, and enter state 61
	'false'        shift, and enter state 62
	'true'         shift, and enter state 63
	L_doubl        shift, and enter state 28
	L_integ        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 31

	Double         goto state 38
	Integer        goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 42
	Exp14          goto state 43
	Exp13          goto state 44
	Exp12          goto state 78

State 12


	'('            shift, and enter state 59
	'++'           shift, and enter state 60
	'--'           shift, and enter state 61
	'false'        shift, and enter state 62
	'true'         shift, and enter state 63
	L_doubl        shift, and enter state 28
	L_integ        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 31

	Double         goto state 38
	Integer        goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 42
	Exp14          goto state 43
	Exp13          goto state 44
	Exp12          goto state 45
	Exp11          goto state 77

State 13


	'('            shift, and enter state 59
	'++'           shift, and enter state 60
	'--'           shift, and enter state 61
	'false'        shift, and enter state 62
	'true'         shift, and enter state 63
	L_doubl        shift, and enter state 28
	L_integ        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 31

	Double         goto state 38
	Integer        goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 42
	Exp14          goto state 43
	Exp13          goto state 44
	Exp12          goto state 45
	Exp11          goto state 46
	Exp10          goto state 76

State 14


	'('            shift, and enter state 59
	'++'           shift, and enter state 60
	'--'           shift, and enter state 61
	'false'        shift, and enter state 62
	'true'         shift, and enter state 63
	L_doubl        shift, and enter state 28
	L_integ        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 31

	Double         goto state 38
	Integer        goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 42
	Exp14          goto state 43
	Exp13          goto state 44
	Exp12          goto state 45
	Exp11          goto state 46
	Exp10          goto state 47
	Exp9           goto state 75

State 15


	'('            shift, and enter state 59
	'++'           shift, and enter state 60
	'--'           shift, and enter state 61
	'false'        shift, and enter state 62
	'true'         shift, and enter state 63
	L_doubl        shift, and enter state 28
	L_integ        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 31

	Double         goto state 38
	Integer        goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 42
	Exp14          goto state 43
	Exp13          goto state 44
	Exp12          goto state 45
	Exp11          goto state 46
	Exp10          goto state 47
	Exp9           goto state 48
	Exp8           goto state 74

State 16


	'('            shift, and enter state 59
	'++'           shift, and enter state 60
	'--'           shift, and enter state 61
	'false'        shift, and enter state 62
	'true'         shift, and enter state 63
	L_doubl        shift, and enter state 28
	L_integ        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 31

	Double         goto state 38
	Integer        goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 42
	Exp14          goto state 43
	Exp13          goto state 44
	Exp12          goto state 45
	Exp11          goto state 46
	Exp10          goto state 47
	Exp9           goto state 48
	Exp8           goto state 49
	Exp4           goto state 73
	Exp5           goto state 55
	Exp6           goto state 56
	Exp7           goto state 57

State 17


	'('            shift, and enter state 59
	'++'           shift, and enter state 60
	'--'           shift, and enter state 61
	'false'        shift, and enter state 62
	'true'         shift, and enter state 63
	L_doubl        shift, and enter state 28
	L_integ        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 31

	Double         goto state 38
	Integer        goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 42
	Exp14          goto state 43
	Exp13          goto state 44
	Exp12          goto state 45
	Exp11          goto state 46
	Exp10          goto state 47
	Exp9           goto state 48
	Exp8           goto state 49
	Exp4           goto state 50
	Exp3           goto state 72
	Exp5           goto state 55
	Exp6           goto state 56
	Exp7           goto state 57

State 18


	'('            shift, and enter state 59
	'++'           shift, and enter state 60
	'--'           shift, and enter state 61
	'false'        shift, and enter state 62
	'true'         shift, and enter state 63
	L_doubl        shift, and enter state 28
	L_integ        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 31

	Double         goto state 38
	Integer        goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 42
	Exp14          goto state 43
	Exp13          goto state 44
	Exp12          goto state 45
	Exp11          goto state 46
	Exp10          goto state 47
	Exp9           goto state 48
	Exp8           goto state 49
	Exp4           goto state 50
	Exp3           goto state 51
	Exp2           goto state 71
	Exp5           goto state 55
	Exp6           goto state 56
	Exp7           goto state 57

State 19


	'('            shift, and enter state 59
	'++'           shift, and enter state 60
	'--'           shift, and enter state 61
	'false'        shift, and enter state 62
	'true'         shift, and enter state 63
	L_doubl        shift, and enter state 28
	L_integ        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 31

	Double         goto state 38
	Integer        goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 42
	Exp14          goto state 43
	Exp13          goto state 44
	Exp12          goto state 45
	Exp11          goto state 46
	Exp10          goto state 47
	Exp9           goto state 48
	Exp8           goto state 49
	Exp4           goto state 50
	Exp3           goto state 51
	Exp2           goto state 52
	Exp            goto state 70
	Exp1           goto state 54
	Exp5           goto state 55
	Exp6           goto state 56
	Exp7           goto state 57

State 20


	'('            shift, and enter state 59
	'++'           shift, and enter state 60
	'--'           shift, and enter state 61
	'false'        shift, and enter state 62
	'true'         shift, and enter state 63
	L_doubl        shift, and enter state 28
	L_integ        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 31

	Double         goto state 38
	Integer        goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 42
	Exp14          goto state 43
	Exp13          goto state 44
	Exp12          goto state 45
	Exp11          goto state 46
	Exp10          goto state 47
	Exp9           goto state 48
	Exp8           goto state 49
	Exp4           goto state 50
	Exp3           goto state 51
	Exp2           goto state 52
	Exp1           goto state 69
	Exp5           goto state 55
	Exp6           goto state 56
	Exp7           goto state 57

State 21


	'('            shift, and enter state 59
	'++'           shift, and enter state 60
	'--'           shift, and enter state 61
	'false'        shift, and enter state 62
	'true'         shift, and enter state 63
	L_doubl        shift, and enter state 28
	L_integ        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 31

	Double         goto state 38
	Integer        goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 42
	Exp14          goto state 43
	Exp13          goto state 44
	Exp12          goto state 45
	Exp11          goto state 46
	Exp10          goto state 47
	Exp9           goto state 48
	Exp8           goto state 49
	Exp5           goto state 68
	Exp6           goto state 56
	Exp7           goto state 57

State 22


	'('            shift, and enter state 59
	'++'           shift, and enter state 60
	'--'           shift, and enter state 61
	'false'        shift, and enter state 62
	'true'         shift, and enter state 63
	L_doubl        shift, and enter state 28
	L_integ        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 31

	Double         goto state 38
	Integer        goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 42
	Exp14          goto state 43
	Exp13          goto state 44
	Exp12          goto state 45
	Exp11          goto state 46
	Exp10          goto state 47
	Exp9           goto state 48
	Exp8           goto state 49
	Exp6           goto state 67
	Exp7           goto state 57

State 23


	'('            shift, and enter state 59
	'++'           shift, and enter state 60
	'--'           shift, and enter state 61
	'false'        shift, and enter state 62
	'true'         shift, and enter state 63
	L_doubl        shift, and enter state 28
	L_integ        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 31

	Double         goto state 38
	Integer        goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 42
	Exp14          goto state 43
	Exp13          goto state 44
	Exp12          goto state 45
	Exp11          goto state 46
	Exp10          goto state 47
	Exp9           goto state 48
	Exp8           goto state 49
	Exp7           goto state 66

State 24


	'('            shift, and enter state 59
	'++'           shift, and enter state 60
	'--'           shift, and enter state 61
	'false'        shift, and enter state 62
	'true'         shift, and enter state 63
	L_doubl        shift, and enter state 28
	L_integ        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 31
	%eof           reduce using rule 92

	Double         goto state 38
	Integer        goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 42
	Exp14          goto state 43
	Exp13          goto state 44
	Exp12          goto state 45
	Exp11          goto state 46
	Exp10          goto state 47
	Exp9           goto state 48
	Exp8           goto state 49
	Exp4           goto state 50
	Exp3           goto state 51
	Exp2           goto state 52
	Exp            goto state 53
	Exp1           goto state 54
	Exp5           goto state 55
	Exp6           goto state 56
	Exp7           goto state 57
	ListExp        goto state 58

State 25


	'bool'         shift, and enter state 33
	'double'       shift, and enter state 34
	'int'          shift, and enter state 35
	'string'       shift, and enter state 36
	'void'         shift, and enter state 37

	Type           goto state 32

State 26


	L_Id           shift, and enter state 31

	Id             goto state 29
	ListId         goto state 30

State 27


	L_doubl        shift, and enter state 28


State 28

	Double -> L_doubl .                                 (rule 27)
